# mp-deep-learning

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/accuracy/: CMakeLists.txt
benchmark/performance/: CMakeLists.txt
benchmark/precision/: CMakeLists.txt
src/: CMakeLists.txt
src/apps/logging/: CMakeLists.txt
src/apps/onnx-stats/: CMakeLists.txt  checker.cpp
src/apps/polynomial/: CMakeLists.txt
src/apps/universal/: CMakeLists.txt
src/lib/version/: CMakeLists.txt
src/solvers/: CMakeLists.txt
src/tools/semver/: CMakeLists.txt
test/: CMakeLists.txt
